# booklore-runner

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: build-backend.sh  build-frontend.sh  debug-mariadb.sh  download-mariadb.sh  test-backend.sh  test-mariadb.sh
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: backend.rs  constants.rs  frontend.rs  jre.rs  lib.rs  main.rs  mariadb.rs  tray.rs
