[package]
name = "booklore-runner"
version = "1.0.0"
description = "Native macOS app wrapper for BookLore"
authors = []
license = "GPL-3.0"
repository = "https://github.com/booklore-app/booklore-runner"
edition = "2021"

[lib]
name = "booklore_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
window-vibrancy = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
flate2 = "1"
tar = "0.4"
dirs = "5"
open = "5"
image = "0.24"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTP server for frontend (like nginx in Docker)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
# WebSocket proxying
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
http-body-util = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
